# edhtournament

./: .gitignore  LICENSE.md  README.md  docker-compose.yml  hardreset.sh
api/: .coveragerc  Dockerfile  Dockerfile.backup  README.md  pyproject.toml
api/api/: settings.py  urls.py
api/scripts/: get-poetry.sh
api/tournament/: admin.py  forms.py  models.py  serializers.py  urls.py  urls_backup.py  views.py  views_backup.py
api/tournament/management/commands/: initadmin.py
api/tournament/migrations/: 0001_initial.py  0002_auto_20200802_1751.py  0002_auto_20201005_1239.py  0003_auto_20200802_1751.py  0003_auto_20201006_1125.py  0004_auto_20200802_1753.py  0004_auto_20201007_1400.py  0005_auto_20200802_1755.py  0005_auto_20201007_1405.py  0006_auto_20201007_1544.py  0007_remove_pod_pod_players.py  0008_auto_20201007_1602.py  0009_auto_20201007_1936.py  0010_auto_20201007_1954.py  0011_auto_20201012_2153.py  0012_pod__round.py  0013_auto_20201013_0840.py  0014_tournament_admin.py  0015_auto_20201123_1959.py  0016_remove_participant_omw.py
api/tournament/templates/: base.html  index.html  pods.html  tournament.html  tournaments.html
api/tournament/templates/forms/: create_participant.html  create_tournament.html  delete_participant.html  delete_tournament.html  login.html  update_participant.html  update_pod.html  update_tournament.html
api/tournament/templates/registration/: login.html
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  index.css
frontend/src/components/: Header.js
